agregando contenido y modificando css

--- a/index.html
+++ b/index.html
@@ -66,6 +66,23 @@
             </div>
             <div class="contenido">
                 <h3 class="title-nav">Contact</h3>
+                <div class="contact-content">
+                    <div class="icons-content">
+                        <i class="fa-brands fa-whatsapp fa-2x wpp-icon"></i>                       
+                        <p>&nbsp;&nbsp;+54 3878 628115</p>
+                    </div>
+                    <div class="icons-content">
+                        <i class="fa-brands fa-telegram fa-2x telegram-icon"></i>
+                        <p>&nbsp;&nbsp;+54 3878 628115</p>
+                    </div>
+                    <div class="icons-content">
+                        <i class="fa-solid fa-envelope-open-text fa-2x mail-icon"></i>           
+                        <p>&nbsp;&nbsp;charls_0997@hotmail.com</p>
+                    </div>
+                    <div class="icons-content">
+                        <i class="fa-brands fa-linkedin fa-2x linkedin-icon"></i>
+                        <p>&nbsp;&nbsp;https://www.linkedin.com/in/carlos-lobo-9082201b9</p>
+                    </div>
             </div>
         </main>
         <footer class="footer">
