--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="prueba.js"></script>
     <link rel="stylesheet" href="style.css">
     <link href="./fontawesome/css/all.css" rel="stylesheet">
+    <script defer src="events.js"></script>
     <title>Portafolio</title>
 </head>
 
@@ -14,15 +15,126 @@
     <div class="container">
         <header class="header">
             <h1 class="title">CARLOS LOBO</h1>
-            <h3 class="subtitle">Tec. Analista en Sistemas<br>Desarrollador</h3>
+            <h3 class="subtitle">Tec.&nbsp;Analista en Sistemas<br>Desarrollador</h3>
         </header>
         <main class="grid">
             <div class="contenido">
-                <h3 class="title-nav">Portafolio</h3>
-            </div>
+                <button class="button" id="button-content-port">
+                    <h3 class="title-nav">Portafolio</h3>
+                </button>
+                <div class="port-content" id="port-content">
+                    <div class="content-order-in-card">
+                        <div class="card-port">
+                            <h3 class="title-port">Jothti Design</h3>
+                            <img class="img-port" id="react-app" src="/image/JothtiDesign.jpg"></br>
+                            <p><strong>Mi primer aplicación creada con la tecnología de React, a modo de 
+                                proyecto final en el curso, impartido por CoderHouse</strong>
+                                Esta tienda se creo con el fin de comercializar prendas y otros accesorios
+                                varios de interés deportivo, además de proporcionar contactos para la personalización
+                                a gusto del cliente, orientado en una empresa para la que trabaje, en 
+                                el area de diseño grafico.</br></p>
+                            <div class="line"></div></br><strong>Tecnologías:</strong></br>
+                            <div class="icons-p">
+                                <span data-detail="ReactJs"><i class="fa-brands fa-react fa-2x"></i></span>
+                                <span data-detail="HTML5"><i class="fa-brands fa-html5 fa-2x"></i></span>
+                                <span data-detail="CSS3"><i class="fa-brands fa-css3-alt fa-2x"></i></span>
+                                <span data-detail="Javascript"><i class="fa-brands fa-js fa-2x"></i></span>
+                                <span data-detail="npm"><i class="fa-brands fa-npm fa-2x"></i></span>
+                                <span data-detail="Bootstrap"><i class="fa-brands fa-bootstrap fa-2x"></i></span>
+                                <span data-detail="API Firestore"><i class="fa-solid fa-fire fa-2x"></i></span>
+        
+                            </div></br></br>
+                        </div>
+                    </div>
+                    <div class="content-order-in-card">
+                        <div class="card-port">
+                            <h3 class="title-port">Farmacia / Hospital Morillo</h3>
+                            <img class="img-port" src="/image/FarmaciaMorillo.jpg" alt="" srcset="">
+                            <p><strong>Aplicacion para Control de Stock. </strong> Este proyecto fue desarrollado con el fin de llevar 
+                                un control exacto de insumos en farmacia del hospital de Morillo, instalado en un 
+                                servidor local con el sistema de gestion Xampp, con bases de datos MySQL y servidor 
+                                Apache. Creado en Julio del 2020, como uno de los primeros proyectos trabajando 
+                                como freelance..</br></p>
+                            <div class="line"></div></br><strong>Tecnologías:</strong></br>
+                            <div class="icons-p">
+                                <span data-detail="PHP7"><i class="fa-brands fa-php fa-2x a"></i></span>
+                                <span data-detail="HTML5"><i class="fa-brands fa-html5 fa-2x"></i></span>
+                                <span data-detail="CSS3"><i class="fa-brands fa-css3-alt fa-2x"></i></span>
+                                <span data-detail="Javascript"><i class="fa-brands fa-js fa-2x"></i></span>
+                                <span data-detail="Bootstrap"><i class="fa-brands fa-bootstrap fa-2x"></i></span>
+                                <span data-detail="MySQL"><img class="img-icon-p a" src="/image/mysql-icon.png"></span>
+                            </div></br></br>
+                        </div>
+                    </div>
+                    <div class="content-order-in-card">
+                        <div class="card-port">
+                            <h3 class="title-port">Instituto C.E.A.</h3>
+                            <img class="img-port" src="/image/CEA.jpg" alt="" srcset="">
+                            <p><strong>Aplicacion para el Control de alumnos, profesores, cursos y aranceles.</strong> 
+                                Aplicativo local orientado en el control exacto de profesores, cursos a impartir, alumnos y 
+                                los aranceles por alumno. </br>Desarrollado a finales del 2019 ,a modo de proyecto final, 
+                                debia buscar una entidad a la que pudiera aplicar los conocimientos adquiridos de programacion, 
+                                analisis y documentacion. Como primer proyecto desarrollado por completo, soy consiente de 
+                                que le faltan pulir muchas cosas. Originalmente el proyecto lo inicie con dos compañeros 
+                                mas, por cuestiones que desconozco, a mitad del tiempo estimado de entrega del proyecto, 
+                                tuve que continuar solo y recortar los objetivos primeramente planteados, a objetivos con 
+                                los que pueda cumplir con la entrega final.</p>
+                            <div class="line"></div></br><strong>Tecnologías:</strong></br>
+                            <div class="icons-p">
+                                <span data-detail="PHP7"><i class="fa-brands fa-php fa-2x a"></i></span>
+                                <span data-detail="HTML5"><i class="fa-brands fa-html5 fa-2x"></i></span>
+                                <span data-detail="CSS3"><i class="fa-brands fa-css3-alt fa-2x"></i></span>
+                                <span data-detail="Javascript"><i class="fa-brands fa-js fa-2x"></i></span>
+                                <span data-detail="Bootstrap"><i class="fa-brands fa-bootstrap fa-2x"></i></span>
+                                <span data-detail="MySQL"><img class="img-icon-p a" src="/image/mysql-icon.png"></span>
+                            </div></br></br>
+                        </div>
+                    </div>
+                    <div class="content-order-in-card">
+                        <div class="card-port">
+                            <h3 class="title-port">Control de transeuntes / Coronel Juan Solá</h3>
+                            <img class="img-port" src="/image/COVIDMorillo.jpg" alt="" srcset="">
+                            <p><strong>Aplicacion para el Control de transito municipal.</strong> 
+                            A modo de colaboracion, este proyecto fue desarrollado con el fin de llevar un control total del ingreso 
+                            y egreso de transeuntes con sus respectivos vehiculos, desarrollado con php, mysql, js, a principios de 
+                            la pandemia causada por el COVID-19.</p>
+                            <div class="line"></div></br><strong>Tecnologías:</strong></br>
+                            <div class="icons-p">
+                                <span data-detail="PHP7"><i class="fa-brands fa-php fa-2x a"></i></span>
+                                <span data-detail="HTML5"><i class="fa-brands fa-html5 fa-2x"></i></span>
+                                <span data-detail="CSS3"><i class="fa-brands fa-css3-alt fa-2x"></i></span>
+                                <span data-detail="Javascript"><i class="fa-brands fa-js fa-2x"></i></span>
+                                <span data-detail="Bootstrap"><i class="fa-brands fa-bootstrap fa-2x"></i></span>
+                                <span data-detail="MySQL"><img class="img-icon-p a" src="/image/mysql-icon.png"></span>
+                            </div></br></br>
+                        </div>
+                    </div>
+                    <div class="content-order-in-card">
+                        <div class="card-port">
+                            <h3 class="title-port">Supermercado Ōkami</h3>
+                            <img class="img-port" src="/image/SupOkami.jpg" alt="" srcset="">
+                            <p><strong>Ecommerce.</strong> 
+                            Mi primer aplicación creada con JavaScript, Este eCommerce fue creado imaginando un supermercado 
+                            oriental, o por lo menos le quise dar esa tematica por mas que los productos que se vean no ajusticien 
+                            este fin. Es la primera vez que use Javascript en su mayoria para el desarrollo de una app web, la 
+                            fecha en la que cree esta app es en 2021-02, cuando estuve realizando el curso impartido por los chicos
+                             de <strong>CoderHouse</strong></p>
+                            <div class="line"></div></br><strong>Tecnologías:</strong></br>
+                            <div class="icons-p">
+                                <span data-detail="HTML5"><i class="fa-brands fa-html5 fa-2x"></i></span>
+                                <span data-detail="CSS3"><i class="fa-brands fa-css3-alt fa-2x"></i></span>
+                                <span data-detail="Javascript"><i class="fa-brands fa-js fa-2x"></i></span>
+                                <span data-detail="Bootstrap"><i class="fa-brands fa-bootstrap fa-2x"></i></span>
+                            </div></br></br>
+                    </div>
+                    </div>
+                </div>
+            </div>    
             <div class="contenido">
-                <h3 class="title-nav">Skillset</h3>
-                <div class="skill-content">
+                <button class="button" id="button-content-skill">
+                    <h3 class="title-nav">Skillset</h3>
+                </button>
+                <div class="skill-content" id="skill-content">
                     <div class="card-content">
                         <i class="fa-brands fa-php fa-4x php-icon"></i>
                         <p>PHP</p>
@@ -36,7 +148,7 @@
                         <p>CSS</p>
                     </div>
                     <div class="card-content">
-                        <i class="fa-brands fa-css3-alt fa-4x js-icon"></i>
+                        <i class="fa-brands fa-js fa-4x js-icon"></i>
                         <P>JavaScript</P>
                     </div>
                     <div class="card-content">
@@ -62,35 +174,38 @@
                 </div>
             </div>
             <div class="contenido">
-                <h3 class="title-nav">Experience</h3>
+                <button class="button" id="button-content-exp">
+                    <h3 class="title-nav">Experience</h3>
+                </button>
             </div>
             <div class="contenido">
-                <h3 class="title-nav">Contact</h3>
-                <div class="contact-content">
+                <button class="button" id="button-content-cont">
+                    <h3 class="title-nav">Contact</h3>
+                </button>
+                <div class="contact-content" id="contact-content">
                     <div class="icons-content">
-                        <i class="fa-brands fa-whatsapp fa-2x wpp-icon"></i>                       
-                        <p>&nbsp;&nbsp;+54 3878 628115</p>
+                        <a class="icon" href=""><i class="fa-brands fa-whatsapp fa-3x wpp-icon"></i></a>
                     </div>
                     <div class="icons-content">
-                        <i class="fa-brands fa-telegram fa-2x telegram-icon"></i>
-                        <p>&nbsp;&nbsp;+54 3878 628115</p>
+                        <a class="icon" href=""><i class="fa-brands fa-telegram fa-3x telegram-icon"></i></a>
                     </div>
                     <div class="icons-content">
-                        <i class="fa-solid fa-envelope-open-text fa-2x mail-icon"></i>           
-                        <p>&nbsp;&nbsp;charls_0997@hotmail.com</p>
+                        <a class="icon" href=""><i class="fa-solid fa-envelope-open-text fa-3x mail-icon"></i></a>
                     </div>
                     <div class="icons-content">
-                        <i class="fa-brands fa-linkedin fa-2x linkedin-icon"></i>
-                        <p>&nbsp;&nbsp;https://www.linkedin.com/in/carlos-lobo-9082201b9</p>
+                        <a class="icon" href=""><i class="fa-brands fa-linkedin fa-3x linkedin-icon"></i></a>
                     </div>
+                </div>
             </div>
+            <section class="overlay" id="overlay">
+                <div class="contenedor-img">
+                    <img src="" alt="">
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <p class="content-footer">Developed and designed by Carlos Ignacio Lobo. ©2021. All rights reserved.</p>
         </footer>
-
-
-
     </div>
 </body>
 
