--- a/index.html
+++ b/index.html
@@ -8,30 +8,35 @@
     <link rel="stylesheet" href="style.css">
     <link href="./fontawesome/css/all.css" rel="stylesheet">
     <script defer src="events.js"></script>
+    <script defer src="js/particles.js"></script>
+    <script defer src="js/particulas.js"></script>
     <title>Portafolio</title>
 </head>
 
 <body>
+
     <div class="container">
         <header class="header">
-            <h1 class="title">CARLOS LOBO</h1>
-            <h3 class="subtitle">Tec.&nbsp;Analista en Sistemas<br>Desarrollador</h3>
+            <div id="particles-js"></div>
+            <h1 id="title" class="title"></h1>
+            <h5 id="subtitle"></h5>
+            <h3 id="subtitle2"></h3>
         </header>
         <main class="grid">
             <div class="contenido">
                 <button class="button" id="button-content-port">
-                    <h3 class="title-nav">Portafolio</h3>
+                    <h3 class="title-nav">PORTFOLIO</h3>
                 </button>
                 <div class="port-content" id="port-content">
                     <div class="content-order-in-card">
                         <div class="card-port">
                             <h3 class="title-port">Jothti Design</h3>
                             <img class="img-port" id="react-app" src="/image/JothtiDesign.jpg"></br>
-                            <p><strong>Mi primer aplicación creada con la tecnología de React, a modo de 
-                                proyecto final en el curso, impartido por CoderHouse</strong>
+                            <p><strong>Mi primer aplicación creada con la tecnología de React, a modo de
+                                    proyecto final en el curso, impartido por CoderHouse</strong>
                                 Esta tienda se creo con el fin de comercializar prendas y otros accesorios
                                 varios de interés deportivo, además de proporcionar contactos para la personalización
-                                a gusto del cliente, orientado en una empresa para la que trabaje, en 
+                                a gusto del cliente, orientado en una empresa para la que trabaje, en
                                 el area de diseño grafico.</br></p>
                             <div class="line"></div></br><strong>Tecnologías:</strong></br>
                             <div class="icons-p">
@@ -42,18 +47,19 @@
                                 <span data-detail="npm"><i class="fa-brands fa-npm fa-2x"></i></span>
                                 <span data-detail="Bootstrap"><i class="fa-brands fa-bootstrap fa-2x"></i></span>
                                 <span data-detail="API Firestore"><i class="fa-solid fa-fire fa-2x"></i></span>
-        
+
                             </div></br></br>
                         </div>
                     </div>
                     <div class="content-order-in-card">
                         <div class="card-port">
-                            <h3 class="title-port">Farmacia / Hospital Morillo</h3>
-                            <img class="img-port" src="/image/FarmaciaMorillo.jpg" alt="" srcset="">
-                            <p><strong>Aplicacion para Control de Stock. </strong> Este proyecto fue desarrollado con el fin de llevar 
-                                un control exacto de insumos en farmacia del hospital de Morillo, instalado en un 
-                                servidor local con el sistema de gestion Xampp, con bases de datos MySQL y servidor 
-                                Apache. Creado en Julio del 2020, como uno de los primeros proyectos trabajando 
+                            <h3 class="title-port" id="farm">Farmacia / Hospital Morillo</h3>
+                            <img class="img-port" src="/image/FarmaciaMorillo.jpg">
+                            <p><strong>Aplicacion para Control de Stock. </strong> Este proyecto fue desarrollado con el
+                                fin de llevar
+                                un control exacto de insumos en farmacia del hospital de Morillo, instalado en un
+                                servidor local con el sistema de gestion Xampp, con bases de datos MySQL y servidor
+                                Apache. Creado en Julio del 2020, como uno de los primeros proyectos trabajando
                                 como freelance..</br></p>
                             <div class="line"></div></br><strong>Tecnologías:</strong></br>
                             <div class="icons-p">
@@ -68,16 +74,21 @@
                     </div>
                     <div class="content-order-in-card">
                         <div class="card-port">
-                            <h3 class="title-port">Instituto C.E.A.</h3>
-                            <img class="img-port" src="/image/CEA.jpg" alt="" srcset="">
-                            <p><strong>Aplicacion para el Control de alumnos, profesores, cursos y aranceles.</strong> 
-                                Aplicativo local orientado en el control exacto de profesores, cursos a impartir, alumnos y 
-                                los aranceles por alumno. </br>Desarrollado a finales del 2019 ,a modo de proyecto final, 
-                                debia buscar una entidad a la que pudiera aplicar los conocimientos adquiridos de programacion, 
-                                analisis y documentacion. Como primer proyecto desarrollado por completo, soy consiente de 
-                                que le faltan pulir muchas cosas. Originalmente el proyecto lo inicie con dos compañeros 
-                                mas, por cuestiones que desconozco, a mitad del tiempo estimado de entrega del proyecto, 
-                                tuve que continuar solo y recortar los objetivos primeramente planteados, a objetivos con 
+                            <h3 class="title-port" id="cea">Instituto C.E.A.</h3>
+                            <img class="img-port" src="/image/CEA.jpg">
+                            <p><strong>Aplicacion para el Control de alumnos, profesores, cursos y aranceles.</strong>
+                                Aplicativo local orientado en el control exacto de profesores, cursos a impartir,
+                                alumnos y
+                                los aranceles por alumno. </br>Desarrollado a finales del 2019 ,a modo de proyecto
+                                final,
+                                debia buscar una entidad a la que pudiera aplicar los conocimientos adquiridos de
+                                programacion,
+                                analisis y documentacion. Como primer proyecto desarrollado por completo, soy consiente
+                                de
+                                que le faltan pulir muchas cosas. Originalmente el proyecto lo inicie con dos compañeros
+                                mas, por cuestiones que desconozco, a mitad del tiempo estimado de entrega del proyecto,
+                                tuve que continuar solo y recortar los objetivos primeramente planteados, a objetivos
+                                con
                                 los que pueda cumplir con la entrega final.</p>
                             <div class="line"></div></br><strong>Tecnologías:</strong></br>
                             <div class="icons-p">
@@ -93,11 +104,13 @@
                     <div class="content-order-in-card">
                         <div class="card-port">
                             <h3 class="title-port">Control de transeuntes / Coronel Juan Solá</h3>
-                            <img class="img-port" src="/image/COVIDMorillo.jpg" alt="" srcset="">
-                            <p><strong>Aplicacion para el Control de transito municipal.</strong> 
-                            A modo de colaboracion, este proyecto fue desarrollado con el fin de llevar un control total del ingreso 
-                            y egreso de transeuntes con sus respectivos vehiculos, desarrollado con php, mysql, js, a principios de 
-                            la pandemia causada por el COVID-19.</p>
+                            <img class="img-port" src="/image/COVIDMorillo.jpg">
+                            <p><strong>Aplicacion para el Control de transito municipal.</strong>
+                                A modo de colaboracion, este proyecto fue desarrollado con el fin de llevar un control
+                                total del ingreso
+                                y egreso de transeuntes con sus respectivos vehiculos, desarrollado con php, mysql, js,
+                                a principios de
+                                la pandemia causada por el COVID-19.</p>
                             <div class="line"></div></br><strong>Tecnologías:</strong></br>
                             <div class="icons-p">
                                 <span data-detail="PHP7"><i class="fa-brands fa-php fa-2x a"></i></span>
@@ -112,13 +125,17 @@
                     <div class="content-order-in-card">
                         <div class="card-port">
                             <h3 class="title-port">Supermercado Ōkami</h3>
-                            <img class="img-port" src="/image/SupOkami.jpg" alt="" srcset="">
-                            <p><strong>Ecommerce.</strong> 
-                            Mi primer aplicación creada con JavaScript, Este eCommerce fue creado imaginando un supermercado 
-                            oriental, o por lo menos le quise dar esa tematica por mas que los productos que se vean no ajusticien 
-                            este fin. Es la primera vez que use Javascript en su mayoria para el desarrollo de una app web, la 
-                            fecha en la que cree esta app es en 2021-02, cuando estuve realizando el curso impartido por los chicos
-                             de <strong>CoderHouse</strong></p>
+                            <img class="img-port" src="/image/SupOkami.jpg">
+                            <p><strong>Ecommerce.</strong>
+                                Mi primer aplicación creada con JavaScript, Este eCommerce fue creado imaginando un
+                                supermercado
+                                oriental, o por lo menos le quise dar esa tematica por mas que los productos que se vean
+                                no ajusticien
+                                este fin. Es la primera vez que use Javascript en su mayoria para el desarrollo de una
+                                app web, la
+                                fecha en la que cree esta app es en 2021-02, cuando estuve realizando el curso impartido
+                                por los chicos
+                                de <strong>CoderHouse</strong></p>
                             <div class="line"></div></br><strong>Tecnologías:</strong></br>
                             <div class="icons-p">
                                 <span data-detail="HTML5"><i class="fa-brands fa-html5 fa-2x"></i></span>
@@ -126,13 +143,13 @@
                                 <span data-detail="Javascript"><i class="fa-brands fa-js fa-2x"></i></span>
                                 <span data-detail="Bootstrap"><i class="fa-brands fa-bootstrap fa-2x"></i></span>
                             </div></br></br>
-                    </div>
+                        </div>
                     </div>
                 </div>
-            </div>    
+            </div>
             <div class="contenido">
                 <button class="button" id="button-content-skill">
-                    <h3 class="title-nav">Skillset</h3>
+                    <h3 class="title-nav">SKILLSET</h3>
                 </button>
                 <div class="skill-content" id="skill-content">
                     <div class="card-content">
@@ -175,12 +192,78 @@
             </div>
             <div class="contenido">
                 <button class="button" id="button-content-exp">
-                    <h3 class="title-nav">Experience</h3>
+                    <h3 class="title-nav">EXPERIENCE</h3>
                 </button>
+                <div class="exp-content" id="exp-content">
+
+                    <div class="exp-card">
+                        <h3 class="title-port">Secretario Administrativo Informático</h3>
+                        <img class="img-exp" src="./image/Legislatura.jpg"></br>
+                        <strong>Legislatura de la Provincia de Salta | 2020-2021</strong>
+                        </br></br>
+                        <div class="line"></div></br>
+                        <p>
+                            Como secretario administrativo a cargo de los equipos informaticos y asesorar a compañeros
+                            de oficina.
+                            </br></br>
+                            <strong>Como tareas principales:</strong></br>
+                            </br>Informatizar documentos fisicos.
+                            </br>Capacitar staff.
+                            </br>Redactar Notas y Proyectos.
+                            </br>Realizar mantenimiento a las computadoras.
+                            </br>Control de padrones.
+                            </br>Tareas varias.
+                        </p>
+                    </div>
+                    <div class="exp-card">
+                        <h3 class="title-port">Desarrollador</h3>
+                        <img class="img-exp" src="./image/InstitutoCEA.jpg"></br>
+                        <strong>Instituto C.E.A. | 2018-2019</strong>
+                        </br></br>
+                        <div class="line"></div></br>
+                        <p>
+                            Desarrollando un aplicativo web, con el cual el usuario tendria la facilidad de controlar,
+                            gestionar y
+                            crear los aranceles deseados para los alumnos de la institucion. A modo de Proyecto final
+                            para la carrera
+                            de Tec. Analista en Sistemas
+                            </br></br>
+                            <strong><a id="refExpCea">¡Ver mas sobre el proyecto!</a></strong>
+                    </div>
+                    <div class="exp-card">
+                        <h3 class="title-port">Desarrollador</h3>
+                        <img class="img-exp" src="./image/farmacia.jpg"></br>
+                        <strong>Farmacia | Hospital Morillo | 2020</strong>
+                        </br></br>
+                        <div class="line"></div></br>
+                        <p>
+                            Desarrollando un aplicativo web, enfocado en el control exhaustivo de insumos farmaceuticos,
+                            automatizando calculos
+                            de insumos necesarios mensualmente de acuerdo al criterio profesional.
+                            </br></br>
+                            <strong><a id="refExpFarm">¡Ver mas sobre el proyecto!</a></strong>
+                    </div>
+                    <div class="exp-card">
+                        <h3 class="title-port">Diseñador Grafico</h3>
+                        <img class="img-exp" src="./image/corel.jpg"></br>
+                        <strong>Herramienta CorelDraw 2020</strong>
+                        </br></br>
+                        <div class="line"></div></br>
+                        <p>
+                            Actualmente me encuentro trabajando para<strong><a href="https://www.instagram.com/el.oasis.gaona/"> El Oasis de Gaona </a></strong>
+                            , manejando las redes y el diseño de banners. Tambien trabajé para empresa orientada en diseñar
+                            prendas de deporte llamada JothtiDesign, a la cual le hice el logo, por un corto tiempo.
+                            </br></br>
+                            <strong>Para ver los proyectos</strong></br></br>
+                            <strong><a href="https://agitated-bose-f75ee6.netlify.app/">¡Click aquí!</a></strong>
+
+                        </p>
+                    </div>
+                </div>
             </div>
             <div class="contenido">
                 <button class="button" id="button-content-cont">
-                    <h3 class="title-nav">Contact</h3>
+                    <h3 class="title-nav">CONTACT</h3>
                 </button>
                 <div class="contact-content" id="contact-content">
                     <div class="icons-content">
@@ -208,5 +291,6 @@
         </footer>
     </div>
 </body>
+<script src="http://code.jquery.com/jquery-latest.js"></script>
 
 </html>
