--- a/index.html
+++ b/index.html
@@ -291,6 +291,5 @@
         </footer>
     </div>
 </body>
-<script src="http://code.jquery.com/jquery-latest.js"></script>
-
+<script src="/js/jquery.js"></script>
 </html>
