--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="prueba.js"></script>
     <link rel="stylesheet" href="style.css">
     <link href="./fontawesome/css/all.css" rel="stylesheet">
+    <script src="js/loading.js"></script>
     <script defer src="events.js"></script>
     <script defer src="js/particles.js"></script>
     <script defer src="js/particulas.js"></script>
@@ -14,7 +15,9 @@
 </head>
 
 <body>
-
+    <div class="loading show">
+        <div class="spin"></div>
+    </div>
     <div class="container">
         <header class="header">
             <div id="particles-js"></div>
@@ -267,16 +270,16 @@
                 </button>
                 <div class="contact-content" id="contact-content">
                     <div class="icons-content">
-                        <a class="icon" href=""><i class="fa-brands fa-whatsapp fa-3x wpp-icon"></i></a>
+                        <a class="icon"><span data-detail="+54&nbsp;3878 628115"><i class="fa-brands fa-whatsapp-square fa-3x wpp-icon"></i></span></a>
                     </div>
                     <div class="icons-content">
-                        <a class="icon" href=""><i class="fa-brands fa-telegram fa-3x telegram-icon"></i></a>
+                        <a class="icon"><span data-detail="charls_0997@hotmail.com"><i class="fa-solid fa-square-envelope fa-3x mail-icon"></i></span></a>
                     </div>
                     <div class="icons-content">
-                        <a class="icon" href=""><i class="fa-solid fa-envelope-open-text fa-3x mail-icon"></i></a>
+                        <a class="icon" href="https://github.com/carloslobo09"><i class="fa-brands fa-github fa-3x telegram-icon"></i></a>
                     </div>
                     <div class="icons-content">
-                        <a class="icon" href=""><i class="fa-brands fa-linkedin fa-3x linkedin-icon"></i></a>
+                        <a class="icon" href="https://www.linkedin.com/in/carlos-lobo-9082201b9"><i class="fa-brands fa-linkedin fa-3x linkedin-icon"></i></a>
                     </div>
                 </div>
             </div>
