--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="prueba.js"></script>
     <link rel="stylesheet" href="style.css">
     <link href="./fontawesome/css/all.css" rel="stylesheet">
-    <script src="js/loading.js"></script>
+    <script defer src="js/loading.js"></script>
     <script defer src="events.js"></script>
     <script defer src="js/particles.js"></script>
     <script defer src="js/particulas.js"></script>
     <title>Portafolio</title>
 </head>
 
-<body>
+<body id="body">
     <div class="loading show">
         <div class="spin"></div>
     </div>
     <div class="container">
         <header class="header">
             <div id="particles-js"></div>
-            <h1 id="title" class="title"></h1>
-            <h5 id="subtitle"></h5>
-            <h3 id="subtitle2"></h3>
+            <div class="grid2">
+                <h1 id="title" class="title"></h1>
+                <h5 id="subtitle"></h5>
+                <h3 id="subtitle2"></h3>
+            </div>
         </header>
         <main class="grid">
             <div class="contenido">
@@ -202,7 +203,7 @@
                     <div class="exp-card">
                         <h3 class="title-port">Secretario Administrativo Informático</h3>
                         <img class="img-exp" src="./image/Legislatura.jpg"></br>
-                        <strong>Legislatura de la Provincia de Salta | 2020-2021</strong>
+                        <strong style="text-align: center;">Legislatura de la Provincia de Salta | 2020-2021</strong>
                         </br></br>
                         <div class="line"></div></br>
                         <p>
