--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div id="particles-js"></div>
             <div class="grid2">
                 <h1 id="title" class="title"></h1>
-                <h5 id="subtitle"></h5>
-                <h3 id="subtitle2"></h3>
+                <div id="subtitle"></div>
+                <div id="subtitle2"></div>
             </div>
         </header>
         <main class="grid">
