Arreglando para gh-pages 2

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 <span data-detail="CSS3"><i class="fa-brands fa-css3-alt fa-2x"></i></span>
                                 <span data-detail="Javascript"><i class="fa-brands fa-js fa-2x"></i></span>
                                 <span data-detail="Bootstrap"><i class="fa-brands fa-bootstrap fa-2x"></i></span>
-                                <span data-detail="MySQL"><img class="img-icon-p a" src="/image/mysql-icon.png"></span>
+                                <span data-detail="MySQL"><img class="img-icon-p a" src="./image/mysql-icon.png"></span>
                             </div></br></br>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
                                 <span data-detail="CSS3"><i class="fa-brands fa-css3-alt fa-2x"></i></span>
                                 <span data-detail="Javascript"><i class="fa-brands fa-js fa-2x"></i></span>
                                 <span data-detail="Bootstrap"><i class="fa-brands fa-bootstrap fa-2x"></i></span>
-                                <span data-detail="MySQL"><img class="img-icon-p a" src="/image/mysql-icon.png"></span>
+                                <span data-detail="MySQL"><img class="img-icon-p a" src="./image/mysql-icon.png"></span>
                             </div></br></br>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                                 <span data-detail="CSS3"><i class="fa-brands fa-css3-alt fa-2x"></i></span>
                                 <span data-detail="Javascript"><i class="fa-brands fa-js fa-2x"></i></span>
                                 <span data-detail="Bootstrap"><i class="fa-brands fa-bootstrap fa-2x"></i></span>
-                                <span data-detail="MySQL"><img class="img-icon-p a" src="/image/mysql-icon.png"></span>
+                                <span data-detail="MySQL"><img class="img-icon-p a" src="./image/mysql-icon.png"></span>
                             </div></br></br>
                         </div>
                     </div>
