Arreglando subtitle en mediaquerys

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header class="header">
             <div id="particles-js"></div>
             <div class="grid2">
-                <h1 id="title" class="title"></h1>
+                <h1 id="title" class="title"></h1><br>
                 <div id="subtitle"></div>
                 <div id="subtitle2"></div>
             </div>
@@ -86,10 +86,10 @@
                                 final,
                                 debia buscar una entidad a la que pudiera aplicar los conocimientos adquiridos de
                                 programacion,
-                                analisis y documentacion. Como primer proyecto desarrollado por completo, soy consiente
+                                analisis y documentacion. Como primer proyecto desarrollado por completo, soy consciente
                                 de
                                 que le faltan pulir muchas cosas. Originalmente el proyecto lo inicie con dos compañeros
-                                mas, por cuestiones que desconozco, a mitad del tiempo estimado de entrega del proyecto,
+                                más, por cuestiones que desconozco, a mitad del tiempo estimado de entrega del proyecto,
                                 tuve que continuar solo y recortar los objetivos primeramente planteados, a objetivos
                                 con
                                 los que pueda cumplir con la entrega final.</p>
@@ -106,7 +106,7 @@
                     </div>
                     <div class="content-order-in-card">
                         <div class="card-port">
-                            <h3 class="title-port">Control de transeuntes / Coronel Juan Solá</h3>
+                            <h3 class="title-port">Control de transeúntes / Coronel Juan Solá</h3>
                             <img class="img-port" src="./image/COVIDMorillo.jpg">
                             <p><strong>Aplicacion para el Control de transito municipal.</strong>
                                 A modo de colaboracion, este proyecto fue desarrollado con el fin de llevar un control
