--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Portfolio - Carlos Lobo">
+    <meta property="og:image" content="./image/image-head.jpg">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./image/icon.png">
     <link href="./fontawesome/css/all.css" rel="stylesheet">
     <script defer src="events.js"></script>
     <script src="js/particles.js"></script>
     <script defer src="js/particulas.js"></script>
-    <title>Portafolio</title>
+    <title>Portafolio - Carlos Lobo</title>
 </head>
 
 <body>
@@ -198,21 +201,20 @@
                     <h3 class="title-nav">EXPERIENCE</h3>
                 </button>
                 <div class="exp-content" id="exp-content">
-
                     <div class="exp-card">
-                        <div class="exp-card">
-                            <h3 class="title-port">Desarrollador</h3>
-                            <img class="img-exp" src="./image/farmacia.jpg"></br>
-                            <strong>Farmacia | Hospital Morillo | 2020</strong>
+                        <h3 class="title-port">Desarrollador</h3>
+                        <img class="img-exp" src="./image/farmacia.jpg"></br>
+                        <strong>Farmacia | Hospital Morillo | 2020</strong>
+                        </br></br>
+                        <div class="line"></div></br>
+                        <p>
+                            Desarrollando un aplicativo web, enfocado en el control exhaustivo de insumos farmaceuticos,
+                            automatizando calculos
+                            de insumos necesarios mensualmente de acuerdo al criterio profesional.
                             </br></br>
-                            <div class="line"></div></br>
-                            <p>
-                                Desarrollando un aplicativo web, enfocado en el control exhaustivo de insumos farmaceuticos,
-                                automatizando calculos
-                                de insumos necesarios mensualmente de acuerdo al criterio profesional.
-                                </br></br>
-                                <strong><a id="refExpFarm">¡Ver mas sobre el proyecto!</a></strong>
-                        </div>
+                            <strong><a id="refExpFarm">¡Ver mas sobre el proyecto!</a></strong>
+                    </div>
+                    <div class="exp-card">
                         <h3 class="title-port">Secretario Administrativo Informático</h3>
                         <img class="img-exp" src="./image/Legislatura.jpg"></br>
                         <strong style="text-align: center;">Legislatura de la Provincia de Salta | 2020-2021</strong>
@@ -245,6 +247,7 @@
                             de Tec. Analista en Sistemas
                             </br></br>
                             <strong><a id="refExpCea">¡Ver mas sobre el proyecto!</a></strong>
+                        </p>
                     </div>
                     
                     <div class="exp-card">
