Retoques y agregando burbuja

--- a/index.html
+++ b/index.html
@@ -20,12 +20,16 @@
         <div class="spin"></div>
     </div>
     <div class="container" id="container">
+        
         <header class="header">
             <div id="particles-js"></div>
             <div class="grid2">
                 <h1 id="title" class="title"></h1><br>
                 <div id="subtitle"></div>
                 <div id="subtitle2"></div>
+            </div>
+            <div id="burbuja" class="burbuja">
+                <p id="burbuja-p"></p>
             </div>
         </header>
         <main class="grid">
@@ -192,7 +196,7 @@
                     </div>
                     <div class="card-content">
                         <i class="fa-solid fa-spell-check fa-4x english-icon"></i>
-                        <P>English Technical</P>
+                        <P>Technical english</P>
                     </div>
                 </div>
             </div>
