--- a/index.html
+++ b/index.html
@@ -15,12 +15,38 @@
     <title>Portafolio - Carlos Lobo</title>
 </head>
 
-<body>
+<body id="body">
     <div class="loading show">
         <div class="spin"></div>
     </div>
+    <section class="modal" id="modal">
+        <div class="modal_content">
+            <button class="volverDesktop" id="volverDesktop">&nbsp;<i class="fa-solid fa-caret-left"></i>VOLVER</button>
+            <div class="content_modal" id="content_modal">
+                <span class="close">&times;</span>
+                <button class="verDesktop" id="verDesktop">VER DESKTOP</button>
+                <h1>¿Quien soy?</h1>
+                <p>Soy oriundo de Coronel Juan Solá, un municipio de Rivadavia Banda Norte, vine a Salta 
+                    Capital en búsqueda de cumplir mi sueño, ser Desarrollador. Desde adolescente siempre tuve 
+                    pasión por la Tecnología; computadoras, celulares, software en general, hasta llegando a 
+                    desarrollar
+                     pequeñas páginas web para un juego de ese entonces, o modificando archivos internos 
+                     creando Administradores para servidor in-game. 
+                </br>    Actualmente cuento con un título Terciario de Analista en Sistemas y Programador,
+                 y con el deseo de aumentar el prestigio, me encuentro en mitad de la carrera de Licenciado
+                  en Informatica en la Universidad SIGLO XXI. También estoy capacitándome constantemente por 
+                  internet en plataformas como Udemy, Platzi y CoderHouse, de los cuales cuento que distintas
+                  certificaciones. Considero que no hay límites para especializarse, ya que a diferencia 
+                  de otros rubros, la tecnología Informatica es un mundo que está en constante crecimiento.
+            </br> Mis aspiraciones a futuro son, trabajar para el exterior ya sea en remoto o con posibilidad 
+            de relocalizacion; y por qué no? En una empresa de alto pretigo como Globant o MercadoLibre, entre otras más.
+                </p>
+                <!-- <div class="pantalla-monitor"></div> -->
+            </div>
+            <button class="button-modal" id="button-modal">Descargar C.V.</button>
+        </div>
+    </section>
     <div class="container" id="container">
-        
         <header class="header">
             <div id="particles-js"></div>
             <div class="grid2">
