--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </p>
                 <!-- <div class="pantalla-monitor"></div> -->
             </div>
-            <button class="button-modal" id="button-modal">Descargar C.V.</button>
+            <button class="button-modal" id="button-modal" onclick="document.location='./docs/Moderno Profesional Currículum.pdf'">Descargar C.V.</button>
         </div>
     </section>
     <div class="container" id="container">
