--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button class="verDesktop" id="verDesktop">VER DESKTOP</button>
                 <h1>¿Quien soy?</h1>
                 <p>Soy oriundo de Coronel Juan Solá, un municipio de Rivadavia Banda Norte, vine a Salta 
-                    Capital en búsqueda de cumplir mi sueño, ser Desarrollador. Desde adolescente siempre tuve 
+                    Capital en búsqueda de cumplir mi sueño, ser Desarrollador.</br> Desde adolescente siempre tuve 
                     pasión por la Tecnología; computadoras, celulares, software en general, hasta llegando a 
                     desarrollar
                      pequeñas páginas web para un juego de ese entonces, o modificando archivos internos 
@@ -328,6 +328,9 @@
         </main>
         <footer class="footer">
             <p class="content-footer">Developed and designed by Carlos Ignacio Lobo. ©2021. All rights reserved.</p>
+            <div id="qrcode">
+                <img src="https://www.codigos-qr.com/qr/php/qr_img.php?d=https%3A%2F%2Fcarloslobo09.github.io%2FPortfolio%2F&s=6&e=m" alt="Generador de Códigos QR Codes"/>
+            </div> 
         </footer>
     </div>
 </body>
