Corrigiendo errores de ortografia

--- a/index.html
+++ b/index.html
@@ -34,14 +34,13 @@
                      creando Administradores para servidor in-game. 
                 </br>    Actualmente cuento con un título Terciario de Analista en Sistemas y Programador,
                  y con el deseo de aumentar el prestigio, me encuentro en mitad de la carrera de Licenciado
-                  en Informatica en la Universidad SIGLO XXI. También estoy capacitándome constantemente por 
+                  en Informática en la Universidad SIGLO XXI. También estoy capacitándome constantemente por 
                   internet en plataformas como Udemy, Platzi y CoderHouse, de los cuales cuento que distintas
                   certificaciones. Considero que no hay límites para especializarse, ya que a diferencia 
-                  de otros rubros, la tecnología Informatica es un mundo que está en constante crecimiento.
+                  de otros rubros, la tecnología Informática es un mundo que está en constante crecimiento.
             </br> Mis aspiraciones a futuro son, trabajar para el exterior ya sea en remoto o con posibilidad 
-            de relocalizacion; y por qué no? En una empresa de alto pretigo como Globant o MercadoLibre, entre otras más.
+            de relocalización; y por qué no? En una empresa de alto prestigio como Globant o MercadoLibre, entre otras más.
                 </p>
-                <!-- <div class="pantalla-monitor"></div> -->
             </div>
             <button class="button-modal" id="button-modal" onclick="document.location='./docs/Moderno Profesional Currículum.pdf'">Descargar C.V.</button>
         </div>
