--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Portfolio - Carlos Lobo">
-    <meta property="og:image" content="./image/image-head.jpg">
+    <meta property="og:image" content="../Portfolio/image/image-head.jpg">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="pacman.css">
     <link rel="icon" href="./image/icon.png">
