--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Portfolio - Carlos Lobo">
-    <meta property="og:image" content="../Portfolio/image/image-head.jpg">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta property="og:image" content="../Portfolio/image/image-head.jpg"/>
+    <meta name="keywords" content="curriculum, cv, developer, programador salta, programador, salta programador argentina, developer salta, paginas web, programador junior, junior"/>
+    <meta name="author" content="Carlos Lobo" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="pacman.css">
     <link rel="icon" href="./image/icon.png">
