--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta property="og:image" content="../Portfolio/image/image-meta.jpg"/>
-    <meta name="keywords" content="curriculum, cv, developer, programador salta, programador, salta programador argentina, developer salta, paginas web, programador junior, junior"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="../Portfolio/image/image-meta.jpg" />
+    <meta name="keywords"
+        content="curriculum, cv, developer, programador salta, programador, salta programador argentina, developer salta, paginas web, programador junior, junior" />
     <meta name="author" content="Carlos Lobo" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="pacman.css">
@@ -327,20 +328,19 @@
                 </button>
                 <div class="contact-content" id="contact-content">
                     <div class="icons-content">
-                        <a class="icon"><span data-detail="+54&nbsp;3878 628115"><i
-                                    class="fa-brands fa-whatsapp-square fa-3x wpp-icon"></i></span></a>
+                        <a href="https://api.WhatsApp.com/send?phone=+54 9 3878 62-8115" target="_blank" class="icon"><i class="fa-brands fa-whatsapp fa-3x wpp-icon"></i></a>
                     </div>
                     <div class="icons-content">
-                        <a class="icon"><span data-detail="charls_0997@hotmail.com"><i
-                                    class="fa-solid fa-square-envelope fa-3x mail-icon"></i></span></a>
+                        <a href="https://t.me/IgnacioL0b0" target="_blank" class="icon"><i class="fa-brands fa-telegram fa-3x telegram-icon"></i></a>
                     </div>
                     <div class="icons-content">
-                        <a class="icon" href="https://github.com/carloslobo09"><i
-                                class="fa-brands fa-github fa-3x telegram-icon"></i></a>
+                        <a href="mailto:charls_0997@hotmail.com" target="_blank" class="icon"><i class="fa-solid fa-envelope fa-3x mail-icon"></i></a>
                     </div>
                     <div class="icons-content">
-                        <a class="icon" href="https://www.linkedin.com/in/carlos-lobo-9082201b9"><i
-                                class="fa-brands fa-linkedin fa-3x linkedin-icon"></i></a>
+                        <a class="icon" href="https://github.com/carloslobo09" target="_blank"><i class="fa-brands fa-github fa-3x github-icon"></i></a>
+                    </div>
+                    <div class="icons-content">
+                        <a class="icon" href="https://www.linkedin.com/in/carlos-lobo-9082201b9" target="_blank"><i class="fa-brands fa-linkedin fa-3x linkedin-icon"></i></a>
                     </div>
                 </div>
             </div>
@@ -361,4 +361,5 @@
 </body>
 <script src="./js/jquery.js"></script>
 <script src="./js/loading.js"></script>
+
 </html>
